# education

./: pyproject.toml
education/: asgi.py  settings.py  urls.py  wsgi.py
school_gallery/: admin.py  apps.py  models.py  urls.py  views.py
school_gallery/migrations/: 0001_initial.py
school_updates/: admin.py  apps.py  models.py  urls.py  views.py
school_updates/migrations/: 0001_initial.py  0002_notice_title.py
student/: admin.py  models.py
student/migrations/: 0001_initial.py  0002_remove_transfercertificate_student_delete_student_and_more.py  0003_initial.py
templates/: base.html  test'.html
templates/school_gallery/: gallery.html
templates/school_updates/: updates.html
