[tool.poetry]
name = "education"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.1"
whitenoise = "^6.9.0"
dj-database-url = "^2.3.0"
gunicorn = "^23.0.0"
psycopg2-binary = "^2.9.10"
cloudinary = "^1.42.2"
pillow = "^11.1.0"
django-cloudinary-storage = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
